k8s/sy-prod-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: sy-prod
  name: sy-prod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sy-prod
  template:
    metadata:
      labels:
        run: sy-prod
    spec:
      volumes:
        - name: elastic-ca
          secret:
            secretName: quickstart-es-http-certs-public
        - name: alembic
          secret:
            secretName: sy-prod-alembic
      containers:
        - name: sy-prod
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: alembic
              mountPath: "/LabS/temp"
              readOnly: true
            - name: elastic-ca
              mountPath: "/ca.crt"
              subPath: "ca.crt"
          image: gcr.io/soyeon-275107/sy-image:e54b161705bcbbb14ba87b25e8e5b19372ec0f8d
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /LabS/temp/alembic.ini /LabS/alembic.ini
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8000
              path: /
          livenessProbe:
            httpGet:
              port: 8000
              path: /
