k8s/sy-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: sy-prod
  name: sy-prod
  namespace: default
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: sy-prod
  type: NodePort
