k8s/sy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sy-ingress
  namespace: sy
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sy-ip"
    networking.gke.io/managed-certificates: sy-certificate
spec:
  backend:
    serviceName: sy-prod
    servicePort: 8000
